--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,3 +7,15 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
 }
+
+.font-weight-400 {
+    font-weight: 400;
+}
+
+.font-weight-600 {
+    font-weight: 600;
+}
+
+.font-weight-700 {
+    font-weight: 700;
+}
